# swiftclangmodule

./: Package.swift  README.md
Sources/Cxxlib/cxxsource/: CMakeLists.txt
Sources/Cxxlib/cxxsource/include/: public.h
Sources/Cxxlib/cxxsource/include/sublib1/: public1.h
Sources/Cxxlib/cxxsource/include/sublib2/: public2.h
Sources/Cxxlib/cxxsource/sublib1/: subsource1.cpp
Sources/Cxxlib/cxxsource/sublib2/: subsource2.h  subsrouce2.cpp
Sources/Cxxlib/include/: Cxxlib.h
Sources/SwiftTest/: main.swift
